--- a/css/signup.css
+++ b/css/signup.css
@@ -95,10 +95,59 @@ body {
 }
 
 
+
+
+.gallery {
+  margin-left: 20%;
+  margin-right: 20%;
+
+}
+
+.flexGallery {
+  
+  padding: 0;
+  margin: 0;
+
+  list-style: none;
+  
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  
+  -webkit-flex-flow: row wrap;
+  justify-content: center;
+}
+
+.flexGalleryItem {
+ 
+  padding: 5px;
+  
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media all and (max-width: 500px) {
   
   .footer {
-    /* На маленьких экранах вместо строки мы располагаем элементы в столбце */
     
     flex-direction: column;
     justify-content: space-between;
