--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ body {
   margin-top:70px;
   min-height: 100%;
 
+
 }
 
 .marketing .col-lg-4 {
@@ -65,7 +66,6 @@ body {
 
 .featurette-divider {
   margin: 60px 0; /* Space out the Bootstrap <hr> more */
-
 }
 
 /* Thin out the marketing headings */
@@ -77,28 +77,39 @@ body {
 
 
 /* FOOTER */
-
-
 .footer {
-  position: absolute;
-  bottom: 0;
-  max-width: 100%;
-  height: 40px; 
-  width: inherit;
+  border-top: 1px solid #eee;
+  padding-top: 32px;
+  padding-top: 2rem;
+  margin-top: 32px;
+  display: -webkit-flex;
+  display: flex; 
+  justify-content: space-between;
+  align-items: center;
+
 }
+  .footer .footerLeft {
+    width: 33%;
+    margin: auto;
+    
+  }
+  .footer .footerRight {
+    width: 33%;
+    margin: auto;
+    text-align: right;
+  }
 
-#socialNavbar {
-  display:inline-block;
-  float: none;
-  text-align: center;
- }
+  .footer .socialRound {
+    width: 33%;
+    margin: auto;
+    text-align: center;
+  }    
+  .footer .socialRound a {
+    padding-left: 16px;
+    padding-left: 1rem; }
 
-/*.container-fluid {
-  position: absolute;
-  bottom: 0px;
-  width: inherit;
-}*/
-.social i {
+
+.footer i {
     width: 40px;
     height: 40px;
     color: #FFF;
@@ -116,48 +127,60 @@ body {
     -o-transition: all ease 0.3s;
     -ms-transition: all ease 0.3s;
 }
-.social .fa-facebook:hover {
+.footer .fa-facebook:hover {
     color: #3b5998;
 }
-.social .fa-twitter:hover {
+.footer .fa-twitter:hover {
     color: #00ABE3;
 }
-.social .fa-vk:hover {
+.footer .fa-vk:hover {
     color: #45668e;
 }
-.social .fa-instagram:hover {
+.footer .fa-instagram:hover {
     color: #517fa4;
 }
 
 
 
- #map {
+
+
+
+
+#map {
         width: 500px;
         height: 400px;
         background-color: #CCC;
 
-      }
+     }
 
 .gallery {
-  width: 560px;
-  margin: auto;
-  display: block;
+  margin-left: 20%;
+  margin-right: 20%;
+
 }
 
-.gallery ul {
+.flexGallery {
+  
+  padding: 0;
+  margin: 0;
+
   list-style: none;
+  
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  
+  -webkit-flex-flow: row wrap;
+  justify-content: center;
 }
 
-.gallery li {
-  float: left;
-  margin: 10px;
-
+.flexGalleryItem {
+  padding: 5px;
 }
 
-.gallery img {
-  display: block;
 
-}
 .gallery img:hover {
   border: 1px solid #fff;
   cursor:pointer;
@@ -170,9 +193,6 @@ body {
 -------------------------------------------------- */
 
 @media (min-width: 768px) {
-  /* Navbar positioning foo */
- 
- 
 
   /* Bump up size of carousel content */
   .carousel-caption p {
@@ -193,5 +213,33 @@ body {
 }
 
 
-}
+@media all and (max-width: 500px) {
+  
+  .footer {
+    
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+    .footer .footerLeft {
+    order: 2;
+    margin-top:10px;
+    width: 100%;
+    text-align: center;
+    
+  }
+  .footer .footerRight {
+    display: none;
 
+  }
+
+  .footer .socialRound {
+    order: 1;
+    width: 100%;
+    margin: auto;
+    text-align: center;
+  }    
+  .footer .socialRound a {
+    padding-left: 16px;
+    padding-left: 1rem; }
+}
