--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 html {
   position: relative;
   min-height: 100%;
+
   
 }
 
@@ -35,8 +36,11 @@ body {
   position: absolute;
   top: 0;
   left: 0;
+  height: auto;
+  width: auto;
   min-width: 100%;
-  height: 500px;
+  min-height: 100%;
+  /*height: 500px;*/
 }
 
 
@@ -154,9 +158,9 @@ body {
      }
 
 .gallery {
-  margin-left: 20%;
-  margin-right: 20%;
-
+  /*margin-left: 20%;
+  margin-right: 20%;*/
+ 
 }
 
 .flexGallery {
@@ -174,10 +178,12 @@ body {
   
   -webkit-flex-flow: row wrap;
   justify-content: center;
+
 }
 
 .flexGalleryItem {
   padding: 5px;
+  /*flex: 1 1 auto;*/
 }
 
 
@@ -195,6 +201,7 @@ body {
 @media (min-width: 768px) {
 
   /* Bump up size of carousel content */
+
   .carousel-caption p {
     margin-bottom: 20px;
     font-size: 21px;
